feat(mobile): добавлен каталог классов
