# packages/api-schema/openapi/core.json
@@ -8694,6 +8694,10 @@
             "type": "boolean",
             "title": "School Admin Academic Calendar"
           },
+          "school_admin_class_directory": {
+            "type": "boolean",
+            "title": "School Admin Class Directory"
+          },
           "offline_homework_state": {
             "type": "boolean",
             "title": "Offline Homework State"
@@ -8745,6 +8749,7 @@
           "school_admin_overview",
           "school_admin_social_moderation",
           "school_admin_academic_calendar",
+          "school_admin_class_directory",
           "offline_homework_state",
           "offline_social_messages",
           "offline_support_messages",
@@ -10515,6 +10520,10 @@
             "type": "boolean",
             "title": "School Admin Academic Calendar"
           },
+          "school_admin_class_directory": {
+            "type": "boolean",
+            "title": "School Admin Class Directory"
+          },
           "offline_homework_state": {
             "type": "boolean",
             "title": "Offline Homework State"
@@ -10566,6 +10575,7 @@
           "school_admin_overview",
           "school_admin_social_moderation",
           "school_admin_academic_calendar",
+          "school_admin_class_directory",
           "offline_homework_state",
           "offline_social_messages",
           "offline_support_messages",
